Update color scheme to company colors
added their logo for app icon, 
removed hardcoded strings, 
organized dimens for future use
minor code clean up and renaming files

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,12 +1,16 @@
 <resources>
     <string name="app_name">CG-Challenge</string>
-    <string name="title_activity_maps">Map</string>
+    <string name="title_activity_maps">Camp Gladiator</string>
 
 <!--    Network Dialog Strings     -->
     <string name="network_alert_title">No Internet Connection</string>
     <string name="network_alert_message">Loss of a Data connection. Please try connecting to WIFI or check your service provider</string>
     <string name="dialog_pos_button_text">Okay</string>
+
+
+<!--    Toast Messages -->
     <string name="toast_no_classes">Sorry, there are no Camp Gladiator Classes near by. Please try another search.</string>
+    <string name="default_search_radius">25</string>
 
 
 </resources>
